<resources>
    <string name="app_name">ShopAppp</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="new_user_sign_up_here">New user? Sign up here</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="wall">Wall</string>
    <string name="favorites">Favorite</string>
    <string name="wallet">Wallet</string>
    <string name="order">Order</string>
    <string name="feed">My Feed</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="learn_more">Learn more</string>
    <string name="add_to_cart">Add to Cart</string>
</resources>